:sparkles: Feature done
closes #167

--- a/src/app/main/pages/spares/frequencies/dialogs/create-frequency-dialog/create-frequency-dialog.component.html
+++ b/src/app/main/pages/spares/frequencies/dialogs/create-frequency-dialog/create-frequency-dialog.component.html
@@ -62,7 +62,7 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-          <mat-label>Cant. Mínima</mat-label>
+          <mat-label>Cant. Máxima</mat-label>
           <input
             matInput
             type="number"
