--- a/src/app/main/pages/spares/frequencies/dialogs/edit-frequency-dialog/edit-frequency-dialog.component.html
+++ b/src/app/main/pages/spares/frequencies/dialogs/edit-frequency-dialog/edit-frequency-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="ms-dialog-header">
   <mat-icon class="ms-dialog-header__icon">add</mat-icon>
-  <h2 class="ms-dialog-header__title">Crear frecuencia</h2>
+  <h2 class="ms-dialog-header__title">Editar frecuencia</h2>
   <span class="ms-fill"></span>
   <button mat-icon-button>
     <mat-icon class="ms-dialog-header__close">cancel</mat-icon>
@@ -107,6 +107,6 @@
     (click)="save()"
     [disabled]="!frequencyFormGroup.valid"
   >
-    CREAR
+    EDITAR
   </button>
 </mat-dialog-actions>
