:sparkles: Feature done

--- a/src/app/main/pages/spares/frequencies/dialogs/create-frequency-dialog/create-frequency-dialog.component.html
+++ b/src/app/main/pages/spares/frequencies/dialogs/create-frequency-dialog/create-frequency-dialog.component.html
@@ -2,7 +2,7 @@
   <mat-icon class="ms-dialog-header__icon">add</mat-icon>
   <h2 class="ms-dialog-header__title">Crear frecuencia</h2>
   <span class="ms-fill"></span>
-  <button mat-icon-button>
+  <button mat-icon-button mat-dialog-close>
     <mat-icon class="ms-dialog-header__close">cancel</mat-icon>
   </button>
 </div>
