--- a/src/app/main/pages/spares/frequencies/dialogs/edit-frequency-dialog/edit-frequency-dialog.component.html
+++ b/src/app/main/pages/spares/frequencies/dialogs/edit-frequency-dialog/edit-frequency-dialog.component.html
@@ -1,8 +1,8 @@
 <div class="ms-dialog-header">
-  <mat-icon class="ms-dialog-header__icon">add</mat-icon>
+  <mat-icon class="ms-dialog-header__icon">edit</mat-icon>
   <h2 class="ms-dialog-header__title">Editar frecuencia</h2>
   <span class="ms-fill"></span>
-  <button mat-icon-button>
+  <button mat-icon-button mat-dialog-close>
     <mat-icon class="ms-dialog-header__close">cancel</mat-icon>
   </button>
 </div>
