--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.html
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.html
@@ -1,99 +1,211 @@
 <div class="ms-container">
-    <div class="ms-toolbar">
-        <mat-icon class="ms-toolbar__icon">verified</mat-icon>
-        <h1 class="ms-toolbar__title" [ngClass]="isMobile ? 'ms-toolbar__title--mobile' : 'ms-toolbar__title--desktop'">
-            Revisión de repuestos</h1>
-        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".csv"
-            id="fileInput2">
-        <button type="file" mat-stroked-button class="ms-toolbar__button" accept=".csv" (click)="fileInput2.click()"
-            *ngIf="authService.uiConfig.spareParts.sparesCheck.toolbar.attachSis"
-            [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
-            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-            ADJUNTAR SIS
-        </button>
-        <mat-form-field appearance="outline" class="ms-toolbar__input"
-            [ngClass]="isMobile ? 'ms-toolbar__input--mobile' : 'ms-toolbar__input--desktop'">
-            <mat-label>Buscar mejora</mat-label>
-            <mat-icon matPrefix>search</mat-icon>
-            <input matInput type="text" [formControl]="improvementControl" placeholder="Escribir..."
-                (keyup.enter)="singleImprovementCheck()" autocomplete="off">
-        </mat-form-field>
-    </div>
-    <mat-divider></mat-divider>
+  <div class="ms-toolbar">
+    <mat-icon class="ms-toolbar__icon">verified</mat-icon>
+    <h1
+      class="ms-toolbar__title"
+      [ngClass]="
+        isMobile ? 'ms-toolbar__title--mobile' : 'ms-toolbar__title--desktop'
+      "
+    >
+      Revisión de repuestos
+    </h1>
+    <input
+      #fileInput2
+      style="display: none"
+      type="file"
+      (change)="onFileSelected($event)"
+      accept=".csv"
+      id="fileInput2"
+    />
+    <button
+      type="file"
+      mat-stroked-button
+      class="ms-toolbar__button"
+      accept=".csv"
+      (click)="fileInput2.click()"
+      *ngIf="authService.uiConfig.spareParts.sparesCheck.toolbar.attachSis"
+      [ngClass]="
+        isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'
+      "
+    >
+      <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+      ADJUNTAR SIS
+    </button>
+    <mat-form-field
+      appearance="outline"
+      class="ms-toolbar__input"
+      [ngClass]="
+        isMobile ? 'ms-toolbar__input--mobile' : 'ms-toolbar__input--desktop'
+      "
+    >
+      <mat-label>Buscar mejora</mat-label>
+      <mat-icon matPrefix>search</mat-icon>
+      <input
+        matInput
+        type="text"
+        [formControl]="improvementControl"
+        placeholder="Escribir..."
+        (keyup.enter)="singleImprovementCheck()"
+        autocomplete="off"
+      />
+    </mat-form-field>
+  </div>
+  <mat-divider></mat-divider>
 
-    <div class="body-container mat-elevation-z4">
-        <h4 style="font-weight: bold;">Resultado de búsqueda</h4>
-        <div *ngIf="singleCheckedPart; else default">
-
-            <div class="single-query">
-                <div class="checked-part" *ngIf="singleCheckedPart.description">
-                    {{singleCheckedPart.description}}
-                </div>
-                <div class="checked-part">
-                    {{singleCheckedPart.improvedPart}}
-                </div>
-                <span class="indicator">→ El número se reemplaza por →</span>
-                <div class="result-part"
-                    [ngClass]="singleCheckedPart.improvedPart !== singleCheckedPart.evaluatedPart ? 'match' : ''">
-                    {{singleCheckedPart.evaluatedPart}}
-                </div>
-            </div>
+  <div class="body-container mat-elevation-z4">
+    <h4 style="font-weight: bold">Resultado de búsqueda</h4>
+    <div *ngIf="singleCheckedPart; else default">
+      <div class="single-query">
+        <div class="checked-part" *ngIf="singleCheckedPart.description">
+          {{ singleCheckedPart.description }}
         </div>
-        <br>
-        <h4 style="font-weight: bold;">Resultado de SIS</h4>
-        <ng-container *ngIf="checkedParts$ | async; else default">
-            <form *ngFor="let item of dataSparePart; let i=index">
-                <div class="container-form-array">
-                    <!-- [formGroupName]="i" -->
-                    <mat-form-field appearance="outline" style="width: 250px;" class="container-form-array__inputs">
-                        <mat-label>Nombre</mat-label>
-                        <input matInput placeholder="Label" [ngModel]="item.description" name="description" readonly>
-                        <!--  <mat-icon matSuffix>settings</mat-icon> -->
-                    </mat-form-field>
-                    <mat-form-field appearance="outline" style="width: 100px;" class="container-form-array__inputs">
-                        <mat-label>Cantidad</mat-label>
-                        <input matInput placeholder="Cantidad" [ngModel]="item.quantity" name='quantity' readonly>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline" style="width: 180px;" class="container-form-array__inputs">
-                        <mat-label>Nº de parte</mat-label>
-                        <input matInput placeholder="Nº de parte actual" [ngModel]="item.improvedPart"
-                            name="improvedPart" readonly>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline" style="width: 180px;" class="container-form-array__inputs">
-                        <mat-label>Nº de parte disponible</mat-label>
-                        <input matInput placeholder="Nº de parte mejorada" [ngModel]="item.evaluatedPart"
-                            name="evaluatedPart" [ngClass]="item.improvedPart !== item.evaluatedPart ? 'match' : ''"
-                            readonly>
-                    </mat-form-field>
-
-                    <div class="container-form-array__checked">
-                        <span>Kit</span>
-                        <mat-checkbox class="checked-margin" color="primary" [ngModel]="item.kit" value="checked"
-                            name="kit" disabled>
-                        </mat-checkbox>
-                        <!-- <p *ngIf="item.kit" style="color: red; font-weight: bold;">Eliminado</p> -->
-                    </div>
-
-                    <button mat-icon-button color="warn" style="margin-top: 8px;" (click)="deleteResult(i)">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                </div>
-                <!-- Aqui va los stoks -->
-            </form>
-        </ng-container>
-        <ng-template #default>
-            <div class="ms-table-default">
-                <span>
-                    <mat-icon style="vertical-align: middle;">air</mat-icon> Sin resultados
-                </span>
-            </div>
-        </ng-template>
-        <div class="footer">
-            <button mat-stroked-button class="ms-button" (click)="downloadXls()" [disabled]="dataSparePart.length < 1"
-                *ngIf="authService.uiConfig.spareParts.sparesCheck.actions.download">
-                DESCARGAR
-            </button>
+        <div class="checked-part">
+          {{ singleCheckedPart.improvedPart }}
         </div>
+        <span class="indicator">→ El número se reemplaza por →</span>
+        <div
+          class="result-part"
+          [ngClass]="
+            singleCheckedPart.improvedPart !== singleCheckedPart.evaluatedPart
+              ? 'match'
+              : ''
+          "
+        >
+          {{ singleCheckedPart.evaluatedPart }}
+        </div>
+      </div>
     </div>
+    <br />
+    <h4 style="font-weight: bold">Resultado de SIS</h4>
+    <ng-container *ngIf="checkedParts$ | async; else default">
+      <form *ngFor="let item of dataSparePart; let i = index">
+        <div class="container-form-array">
+          <!-- [formGroupName]="i" -->
+          <mat-form-field
+            appearance="outline"
+            style="width: 250px"
+            class="container-form-array__inputs"
+          >
+            <mat-label>Nombre</mat-label>
+            <input
+              matInput
+              placeholder="Label"
+              [ngModel]="item.description"
+              name="description"
+              readonly
+            />
+            <!--  <mat-icon matSuffix>settings</mat-icon> -->
+          </mat-form-field>
+          <mat-form-field
+            appearance="outline"
+            style="width: 100px"
+            class="container-form-array__inputs"
+          >
+            <mat-label>Cantidad</mat-label>
+            <input
+              matInput
+              placeholder="Cantidad"
+              [ngModel]="item.quantity"
+              name="quantity"
+              readonly
+            />
+          </mat-form-field>
+          <mat-form-field
+            appearance="outline"
+            style="width: 180px"
+            class="container-form-array__inputs"
+          >
+            <mat-label>Nº de parte</mat-label>
+            <input
+              matInput
+              placeholder="Nº de parte actual"
+              [ngModel]="item.improvedPart"
+              name="improvedPart"
+              readonly
+            />
+          </mat-form-field>
+          <mat-form-field
+            appearance="outline"
+            style="width: 180px"
+            class="container-form-array__inputs"
+          >
+            <mat-label>Nº de parte disponible</mat-label>
+            <span matSuffix>
+              <ng-container *ngIf="item.frequency; else notMatched">
+                <mat-icon
+                  *ngIf="item.frequency >= threshold"
+                  class="trending-up"
+                  matTooltip="Frecuencia alta"
+                  >trending_up</mat-icon
+                >
+                <mat-icon
+                  *ngIf="item.frequency < threshold"
+                  class="trending-down"
+                  matTooltip="Frecuencia baja"
+                  >trending_down</mat-icon
+                >
+              </ng-container>
+              <ng-template #notMatched>
+                <mat-icon class="sync-problem" matTooltip="Sin coincidencias"
+                  >sync_problem</mat-icon
+                >
+              </ng-template>
+            </span>
+            <input
+              matInput
+              placeholder="Nº de parte mejorada"
+              [ngModel]="item.evaluatedPart"
+              name="evaluatedPart"
+              [ngClass]="
+                item.improvedPart !== item.evaluatedPart ? 'match' : ''
+              "
+              readonly
+            />
+          </mat-form-field>
 
+          <div class="container-form-array__checked">
+            <span>Kit</span>
+            <mat-checkbox
+              class="checked-margin"
+              color="primary"
+              [ngModel]="item.kit"
+              value="checked"
+              name="kit"
+              disabled
+            >
+            </mat-checkbox>
+            <!-- <p *ngIf="item.kit" style="color: red; font-weight: bold;">Eliminado</p> -->
+          </div>
+
+          <button
+            mat-icon-button
+            color="warn"
+            style="margin-top: 8px"
+            (click)="deleteResult(i)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+        <!-- Aqui va los stoks -->
+      </form>
+    </ng-container>
+    <ng-template #default>
+      <div class="ms-table-default">
+        <span>
+          <mat-icon style="vertical-align: middle">air</mat-icon> Sin resultados
+        </span>
+      </div>
+    </ng-template>
+    <div class="footer">
+      <button
+        mat-stroked-button
+        class="ms-button"
+        (click)="downloadXls()"
+        [disabled]="dataSparePart.length < 1"
+        *ngIf="authService.uiConfig.spareParts.sparesCheck.actions.download"
+      >
+        DESCARGAR
+      </button>
+    </div>
+  </div>
 </div>
