--- a/src/app/main/pages/spares/frequencies/frequencies.component.html
+++ b/src/app/main/pages/spares/frequencies/frequencies.component.html
@@ -102,7 +102,7 @@
           Frecuencia
         </th>
         <td mat-cell *matCellDef="let element" class="ms-table__header">
-          {{ element.frequency ? element.frequency : 0 }}
+          {{ (element.frequency ? element.frequency : 0) | number: '2.0' }} %
         </td>
       </ng-container>
 
