--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -63,6 +63,7 @@
       padding-bottom: 0px !important;
       font-size: 12px !important;
       margin-right: 8px;
+      width: 170px;
 
       .mat-form-field-wrapper {
         padding: 0px !important;
